dev/deployment.yaml
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  labels:
    app: foo
spec:
  containers:
    - name: foo-app
      image: 'ealen/echo-server:latest'
  nodeSelector:
    ostype: linux
